Opened 6 months ago
Closed 6 months ago
#19205 closed bug (fixed)
[HaikuDepot] All packages tab does not display icons until all of the icons are fetched
Reported by: | diver | Owned by: | apl-haiku |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta6 |
Component: | Applications/HaikuDepot | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev58289.
HaikuDepot used to show generic package icons in all packages tab before custom were fetched from HDS.
Change History (1)
comment:1 by , 6 months ago
Milestone: | Unscheduled → R1/beta6 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fix merged in hrev58290.