HaikuDepot: Show default icons early in list

Resolves #19205

Change-Id: I16def80ba004efbea4303f7d74ee87678a959027
Reviewed-on: https://review.haiku-os.org/c/haiku/+/8511
Reviewed-by: Jérôme Duval <jerome.duval@gmail.com>
Tested-by: Commit checker robot <no-reply+buildbot@haiku-os.org>
Haiku-Format: Haiku-format Bot <no-reply+haikuformatbot@haiku-os.org>